--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@ Personal history</h2>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-twitter"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/tonaorjjira._/" target="_blank">
+            <i class="icon-social-instagram"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#!">
+          <a class="social-link rounded-circle text-white" href="https://github.com/tonaorjjira" target="_blank">
             <i class="icon-social-github"></i>
           </a>
         </li>
