Publish Web Playground with Github Pages

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center text-white my-auto">
-      <h1 class="mb-1">PORTFOLIO</h1>
+      <h1 class="mb-1">JUNJIRA DUMJUTI</h1>
       <h3 class="mb-5">
-        <em>Junjira Dumjuti</em>
+        <em>Wellcome to my portfolio</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
